# AsyncFile

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
examples/: main.cpp
include/AsyncFile/: AsyncFileReader.hpp  AsyncFileWriter.hpp
src/: AsyncFileReader.cpp  AsyncFileWriter.cpp
tests/: CMakeLists.txt  test_async_file_writer.cpp
